@@ -2,9 +2,12 @@
 - Initial release
 ...
 
-[B]Version 1.0.1  (07.10.2018)[/B] by realvito
+[B]Version 1.0.1  (06.10.2018)[/B] by realvito
 - fixed: Bei jedem autom. Update der vom User gemachten Einträge wird nicht die aktuelle Uhrzeit übergeben
 - fixed: Ausführung/Update der vom User gemachten Einträge findet unabhängig des übergebenen Stunden-Intervalls - immer stündlich statt
 - optimized: Man kann jetzt sowohl den Eintrag in "Crontab" als auch den erstellten Ordner der Serie in der KODI-Medienbibliothek löschen (settings)
 - optimized: Script komplett überarbeitet
 - added: Direkte LOG-Meldungen sowohl bei normaler Ausführung als auch bei Fehlern (nicht Debugmodus)
+
+[B]Version 1.0.2  (20.10.2019)[/B] by realvito
+- fixed: Azeige und Löschen von Titeln mit Sonderzeichen fehlerhaft
